Comentários e Readme com instruções.
Comentários e Readme com instruções.

--- a/src/app/components/search-filters/search-filters.component.html
+++ b/src/app/components/search-filters/search-filters.component.html
@@ -41,4 +41,5 @@
   </form>
 </div>
 
+<!-- Chamada do componente filho passando como input a página atual e recebendo como output quando o usuário mudou a paginação -->
 <search-results [page]="page" (pageChange)="pageChange($event)"></search-results>
