--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -31,7 +31,7 @@
         <td mat-cell *matCellDef="let system"> {{system.status | status}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Acoes">
+      <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Ações </th>
         <td mat-cell *matCellDef="let system">
           <a (click)=edit(system.id)>
@@ -44,7 +44,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [length]="totalResults" [pageSize]="50" (page)="paginar($event)">
+    <mat-paginator [length]="totalResults" [pageSize]="2" (page)="paginar($event)">
     </mat-paginator>
   </div>
 
